# tbc-tools

./: .gitignore  .gitmodules  CMakeLists.txt  DEV_NOTES.md  README.md  flake.nix  log_note_advanced_scope_controls_2026-03-09.md  prompt readme.md  remux_session_readme.md  vcpkg.json
.github/workflows/: build_linux_tools.yml  build_macos_tools.yml  build_windows_tools.yml  prepare_release.yml  release.yml  tests.yml
ci/: __init__.py  check_ci_contracts.py  run_local_ci_parity.sh  verify_linux_bundle.sh
ci/tests/: __init__.py  test_check_ci_contracts.py
development-logs/: log_note_ux_buttons_fixed_2026-02-26.md  log_note_windows_workflow_fixed_2026-02-26.md  prompt_readme.md
docs/Tools/: ld-analyse.md  ld-export-metadata.md
src/audio-align/: audioalignmentutil.cpp
src/efm-decoder/tools/efm-decoder-f2/src/decoders/: dec_f2sectioncorrection.cpp
src/ld-analyse/: CMakeLists.txt  README.md  chromadecoderconfigdialog.cpp  chromadecoderconfigdialog.h  chromadecoderconfigdialog.ui  configuration.cpp  configuration.h  efmhandlerdialog.cpp  efmhandlerdialog.h  exportarguments.cpp  exportarguments.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  ld-analyse-resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadataconversiondialog.cpp  metadataconversiondialog.h  metadataconverterutil.cpp  metadataconverterutil.h  notesviewerdialog.cpp  notesviewerdialog.h  oscilloscopedialog.cpp  oscilloscopedialog.h  plotwidget.cpp  plotwidget.h  tbcsource.cpp  tbcsource.h  teletextviewerdialog.cpp  teletextviewerdialog.h  timelinemarkerslider.cpp  timelinemarkerslider.h  vectorscopedialog.cpp  vectorscopedialog.h
src/ld-analyse/install/: ld-analyse.desktop
src/ld-analyse/testexportarguments/: CMakeLists.txt  testexportarguments.cpp
src/ld-chroma-decoder/: CMakeLists.txt  comb.cpp  comb.h  main.cpp  nnTransform3D_kernel.cu  outputwriter.cpp  palcolour.cpp  palcolour.h  secamdecoder.cpp  secamdecoder.h  sourcefield.cpp
src/ld-chroma-decoder/testsourcefield/: CMakeLists.txt  testsourcefield.cpp
src/ld-disc-stacker/: main.cpp
src/ld-discmap/: main.cpp
src/ld-dropout-correct/: main.cpp
src/ld-export-metadata/: CMakeLists.txt  README.md  ffmetadata.cpp  ffmetadata.h  main.cpp  metadataexportdialog.cpp  metadataexportdialog.h  metadataexportdialog.ui
src/ld-lds-converter/: README.md  converterdialog.cpp  converterdialog.h  converterdialog.ui  dataconverter.cpp  dataconverter.h  main.cpp
src/ld-process-vbi/: CMakeLists.txt  decoderpool.cpp  decoderpool.h  main.cpp  teletextintegration.cpp  teletextintegration.h
src/ld-process-vits/: main.cpp  processingpool.cpp  processingpool.h
src/metadata-converter/: lddecodemetadata.cpp  metadataconversiondialog.cpp  metadataconverterutil.cpp
src/tbc-export-metadata/: main.cpp  metadataexportdialog.cpp  metadataexportdialog.h
src/tbc-metadata-converter/: lddecodemetadata.cpp  lddecodemetadata.h
src/tbc-video-export/: CMakeLists.txt  tbc-video-export  tbc-video-export.in
src/tbc-video-export/src/tbc_video_export/common/: consts.py  enums.py  tbc_json_helper.py
src/tbc-video-export/src/tbc_video_export/common/utils/: files.py  metadata.py  win32.py
src/tbc-video-export/src/tbc_video_export/config/: default.py
src/tbc-video-export/src/tbc_video_export/opts/: opts_ldtools.py
src/tbc-video-export/src/tbc_video_export/process/wrapper/: wrapper_ffmpeg.py  wrapper_ld_chroma_decoder.py  wrapper_ld_export_metadata.py
src/tbc-video-export/tests/: test_wrappers_ffmpeg.py
src/tbc-video-export/tests/files/: pal_svideo_5.tbc.json
