set(TBC_VIDEO_EXPORT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(TBC_VIDEO_EXPORT_BUILD_SHARE_DIR "${CMAKE_BINARY_DIR}/share/tbc-video-export")
set(TBC_VIDEO_EXPORT_BUILD_BIN_DIR "${CMAKE_BINARY_DIR}/bin")
set(TBC_VIDEO_EXPORT_BUILD_BIN "${TBC_VIDEO_EXPORT_BUILD_BIN_DIR}/tbc-video-export")

file(MAKE_DIRECTORY "${TBC_VIDEO_EXPORT_BUILD_SHARE_DIR}")
file(MAKE_DIRECTORY "${TBC_VIDEO_EXPORT_BUILD_BIN_DIR}")
file(COPY "${TBC_VIDEO_EXPORT_SOURCE_DIR}" DESTINATION "${TBC_VIDEO_EXPORT_BUILD_SHARE_DIR}")
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/tbc-video-export"
               "${TBC_VIDEO_EXPORT_BUILD_BIN}"
               COPYONLY)
file(CHMOD "${TBC_VIDEO_EXPORT_BUILD_BIN}"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/tbc-video-export"
        DESTINATION ${CMAKE_INSTALL_BINDIR})
install(DIRECTORY "${TBC_VIDEO_EXPORT_SOURCE_DIR}/tbc_video_export"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/tbc-video-export/src")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/tbc-video-export")
